--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "devDependencies": {
-    "@openzeppelin/contracts": "^3.4.1",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@supercharge/strings": "^1.25.0",
-    "@truffle/hdwallet-provider": "^2.0.3",
-    "truffle-plugin-verify": "^0.5.21"
+    "hardhat": "^2.14.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.8.3",
+    "dotenv": "^16.0.3"
   }
 }
